# VarlenAbsorbFlashAttn

./: .gitignore  README.md
triton_fa_varlen_v2/: README.md  pyproject.toml
triton_fa_varlen_v2/fixtures/: stage1_shapes.jsonl
triton_fa_varlen_v2/tools/: benchmark_packed_varlen_flash_attn.py  profile_v2_kernels.py  sweep_v2_blocks.py
triton_fa_varlen_v2/triton_fa_varlen_v2/: __init__.py  chunk_indices.py  interface.py  kernels.py  test_smoke.py
triton_target_attn_absorb/: .gitignore  README.md  pyproject.toml  requirements.txt
triton_target_attn_absorb/fixtures/: real_shape_all.json
triton_target_attn_absorb/tools/: parse_ta_pack_stats_log.py  parse_ta_shape_log.py  summarize_ta_lens_records.py  summarize_ta_shape_records.py
triton_target_attn_absorb/triton_target_attn_absorb/: __init__.py  chunk_indices.py  interface.py  kernels.py  test_smoke.py
